feat: implement player session management, game state services, and admin dashboard infrastructure